# rsis2

./: Project.toml
cargo-rsiswrap/: Cargo.toml
cargo-rsiswrap/src/: context.rs  generation.rs  main.rs  predefined.rs
cargo-rsiswrap/templates/: interface.hxx  interface.rs  model_messagepack.jl  msgpack.rs
cargo-rsiswrap/test/: complex.toml  hashmap.toml  ndarray.toml
docs/: Models.md
docs/autocoding/: messagepack_interface.md
docs/memorytable/: README.md
docs/utilities/: README.md
engine/sim/: Cargo.toml
engine/sim/src/: engine.rs  lib.rs  state.rs  threadcontext.rs
rmodel/: Cargo.toml
rmodel/src/: lib.rs
rsiswrap/: .gitignore  Project.toml  README.md
rsiswrap/src/: rsiswrap.jl
rsiswrap/templates/: rsis.toml  rsis_interface.jl  rsis_messagepack.jl
rsiswrap/test/all_data_types/: Cargo.toml  rsisproject.toml
rsiswrap/test/all_data_types/src/: .gitignore  idl.toml  lib.rs
rsiswrap/test/table_example/: table.toml
src/: generate.jl  project.jl  rsis.jl  scenario.jl
test/interface/: idl.toml
test/scenes/: st_2m.toml
utilities/sine/: Cargo.toml  README.md  rsisproject.toml
utilities/sine/scenes/: sine_test.toml
utilities/sine/src/: idl.toml  lib.rs
