[package]
name = "sine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["dylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = {version="0.4.3", features=["serde"]}
nalgebra = {version="0.32.3", features=["serde-serialize"]}
rmodel = { path = "../../rmodel" }
rmp = { version="0.8.12", optional=true}
rmp-serde = { version="1.1.2", optional=true}
serde = { version="1.0.193" }

[features]
default = ["msgpack"]
msgpack = ["dep:rmp", "dep:rmp-serde"]
